# business-idea-analyst-rag-backend

./: pyproject.toml
src/: app.py
